<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".LoginActivity">
<ImageView
    android:id="@+id/imglogo"
    android:layout_width="240dp"
    android:layout_height="100dp"
    android:src="@drawable/img_6"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="30dp"
    ></ImageView>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/etMobileno"
    android:layout_marginRight="15dp"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="15dp"
    android:padding="6dp"
    android:layout_below="@+id/imglogo"
    android:inputType="phone"
    android:maxLength="10"
    android:maxLines="1"
    android:hint="@string/enter_mobile_number"
    />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etpassword"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="6dp"
        android:layout_below="@+id/etMobileno"
        android:inputType="textPassword"
        android:maxLines="1"
        android:hint="@string/password"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnLogin"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:padding="6dp"
        android:layout_below="@id/etpassword"
        android:backgroundTint="@color/mycolor"
        android:text="@string/login"

        android:textStyle="bold"
        android:textSize="20sp"
       android:textColor="#ffe600" />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/forgot_password"
    android:id="@+id/txtforgotpassword"
    android:layout_below="@id/btnLogin"
    android:layout_marginTop="20dp"
    android:layout_centerHorizontal="true"
    android:textSize="16sp"
    android:padding="6dp"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtregister"
        android:text="@string/register_yourself"
        android:textSize="16sp"
        android:padding="6dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
/>
</RelativeLayout>